--- a/01-HTML-CSS/06-BEM model/tamir-roi-yossi/tamir-roi-yossi-COPY/news.html
+++ b/01-HTML-CSS/06-BEM model/tamir-roi-yossi/tamir-roi-yossi-COPY/news.html
@@ -102,7 +102,7 @@
 
             <div class="sub-content__box">
                 <a class="sub-content__link" href="">
-                    <img class="sub-content__img" src="images/manchester.jpg" alt="">
+                    <img class="sub-content__img" src="images/pri4.jpg" alt="">
                     <p class="sub-content__main-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid
                         expedita, est quidem minus et quo eligendi molestiae possimus obcaecati culpa.</p>
                 </a>
@@ -115,7 +115,7 @@
 
             <div class="sub-content__box">
                 <a class="sub-content__link" href="">
-                    <img class="sub-content__img" src="images/lebron.jpg" alt="">
+                    <img class="sub-content__img" src="images/pri2.jpg" alt="">
                     <p class="sub-content__main-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid
                         expedita, est quidem minus et quo eligendi molestiae possimus obcaecati culpa.</p>
                 </a>
@@ -128,7 +128,7 @@
 
             <div class="sub-content__box">
                 <a class="sub-content__link" href="">
-                    <img class="sub-content__img" src="images/barcelona.jpg" alt="">
+                    <img class="sub-content__img" src="images/pri.jpg" alt="">
                     <p class="sub-content__main-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid
                         expedita, est quidem minus et quo eligendi molestiae possimus obcaecati culpa.</p>
                 </a>
@@ -141,7 +141,7 @@
 
             <div class="sub-content__box">
                 <a class="sub-content__link" href="">
-                    <img class="sub-content__img" src="images/wta.jpg" alt="">
+                    <img class="sub-content__img" src="images/pri3.jpg" alt="">
                     <p class="sub-content__main-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid
                         expedita, est quidem minus et quo eligendi molestiae possimus obcaecati culpa.</p>
                 </a>
