--- a/01-HTML-CSS/06-BEM model/tamir-roi-yossi/home.html
+++ b/01-HTML-CSS/06-BEM model/tamir-roi-yossi/home.html
@@ -40,7 +40,7 @@
 
             <div class="main-content__box">
                 <a class="main-content__link" href="">
-                    <img class="main-content__img" src="images/img-news.jpg" alt="">
+                    <img class="main-content__img" src="images/airport_empty.jpg" alt="">
                     <p class="main-content__main-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid
                         expedita, est quidem minus et quo eligendi molestiae possimus obcaecati culpa.</p>
                 </a>
@@ -75,7 +75,7 @@
 
             <div class="main-content__box">
                 <a class="main-content__link" href="">
-                    <img class="main-content__img" src="images/plane.jpg" alt="">
+                    <img class="main-content__img" src="images/airport_bord.jpg" alt="">
                     <p class="main-content__main-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid
                         expedita, est quidem minus et quo eligendi molestiae possimus obcaecati culpa.</p>
                 </a>
