--- a/01-HTML-CSS/06-BEM model/tamir-roi-yossi/news.html
+++ b/01-HTML-CSS/06-BEM model/tamir-roi-yossi/news.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
     <link rel="stylesheet" href="dist/style-bbc.css">
-    <title>BBC &nbsp;|&nbsp; news </title>
+    <title>BBC &nbsp;|&nbsp; News </title>
 </head>
 
 <body>
