--- a/01-HTML-CSS/06-BEM model/Yael_Haim_Ihiya/HOME.html
+++ b/01-HTML-CSS/06-BEM model/Yael_Haim_Ihiya/HOME.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEWS  WEB</title>
+    <title>NEWS WEB</title>
     <link rel="stylesheet" href="dist/style.css" >
     <!--Bootstrap cdn-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -49,6 +49,24 @@
                     <li class="navbar__nav-item">
                       <a class="navbar__nav-link" href="SPORT.html">SPORT</a>
                     </li>
+                    <li class="navbar__nav-item">
+                      <a class="navbar__nav-link" href=>economy</a>
+                      </li>
+                     <li class="navbar__nav-item">
+                     <a class="navbar__nav-link" href=>covid 19</a>
+                     </li>  
+                     <li class="navbar__nav-item">
+                     <a class="navbar__nav-link" href=>global</a>
+                     </li>
+                     <li class="navbar__nav-item">
+                      <a class="navbar__nav-link" href=>u.s.a.</a>
+                     </li>
+                      <li class="navbar__nav-item">
+                          <a class="navbar__nav-link" href=>culture</a>
+                        </li>
+                        <li class="navbar__nav-item">
+                          <a class="navbar__nav-link" href=>politick</a>
+                        </li> 
                   </ul>
                 
             </nav>
@@ -96,10 +114,12 @@
               
 <!--/////////////////////////////////////////////////////////-->
 <div class="container">
-  <div class="grid" style="color: brown;" ><img src="pic/home/bbg.jpg" alt="">  <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>
-  <div class="grid" style="color: brown;"><img src="pic/home/sport.jpg" alt=""> <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>
-  <div class="grid" style="color: brown;"><img src="pic/home/space.jpg" alt=""> <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>  
-  <div class="grid" style="color: brown;"><img src="pic/home/qween.jpg" alt=""> <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>
+  <div class="grid i1" style="color: brown;" ><img src="pic/home/bbg.jpg" alt="">  <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>
+  <div class="grid i2" style="color: brown;"><img src="pic/home/sport.jpg" alt=""> <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>
+  <div class="grid i3" style="color: brown;"><img src="pic/home/space.jpg" alt=""> <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>  
+  <div class="grid i4" style="color: brown;"><img src="pic/home/qween.jpg" alt=""> <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>
+  <div class="grid i5" style="color: brown;"><img src="pic/home/tra.webp" alt=""> <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>
+  <div class="grid i6" style="color: brown;"><img src="pic/home/spjj.jpg" alt=""> <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>
 
 </div>
 </div>
