--- a/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
+++ b/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
@@ -70,81 +70,57 @@
 </div>
 <div class="main__down">
    <div class="main__down__box">
-       <img  src="https://static01.nyt.com/images/2020/08/24/sports/24mlb-kepner-1/merlin_176084667_69b1099b-0b7e-41ce-bfdf-e407899f10dc-articleLarge.jpg?quality=75&auto=webp&disable=upscale">
+       <img  src="pics/European Football.jpg">
        <h2>
-           Lorem ipsum dolor sit amet consectetur.
+        Barcelona strike late to snatch win from Villarreal
        </h2>
-       <h3>
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti beatae facere earum rerum, illo quasi
-           facilis.
-       </h3>
        <p>
-           US & Canada
+        European Football
        </p>
    </div>
    <div class="main__down__box">
-       <img  src="https://static.timesofisrael.com/www/uploads/2021/08/AP21219370302658.jpg">
+       <img  src="pics/Tottenham.jpg">
        <h2>
-           Lorem ipsum dolor sit amet consectetur.
+        Burnley against Tottenham called off because of heavy snow.
        </h2>
-       <h3>
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti beatae facere earum rerum, illo quasi
-           facilis.
-       </h3>
        <p>
-           US & Canada
+        Football
        </p>
    </div>
    <div class="main__down__box">
-       <img  src="https://c.files.bbci.co.uk/4646/production/_118109971_livreal.jpg">
+       <img  src="pics/Medvedev.jpg">
        <h2>
-           Lorem ipsum dolor sit amet consectetur.
+        Medvedev powers Russian team to victory after Australia win
        </h2>
-       <h3>
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti beatae facere earum rerum, illo quasi
-           facilis.
-       </h3>
        <p>
-           US & Canada
+        Tennis
        </p>
    </div>
    <div class="main__down__box">
-       <img  src="https://i.guim.co.uk/img/media/1e8eddb01346e53487ed86ba1ccfe853ef215477/0_733_4692_2815/master/4692.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=4e7e6f632cd441c457c4d91a5205bb17">
+       <img  src="pics/Juventus.jpg">
        <h2>
-           Lorem ipsum dolor sit amet consectetur.
+        Juventus stunned by Atalanta in Serie A.
        </h2>
-       <h3>
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti beatae facere earum rerum, illo quasi
-           facilis.
-       </h3>
        <p>
-           US & Canada
+        European Football
        </p>
    </div>
    <div class="main__down__box">
-       <img  src="https://i.natgeofe.com/n/3a0ef031-ec69-4559-9e41-2a5f70350c96/01-race-horse-deaths-gettyimages-686492928_4x3.jpg">
+       <img  src="pics/golf.png">
        <h2>
-           Lorem ipsum dolor sit amet consectetur.
+        Ko wins LPGA Tour Championship & £1.1m.
        </h2>
-       <h3>
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti beatae facere earum rerum, illo quasi
-           facilis.
-       </h3>
        <p>
-           US & Canada
+           Golf
        </p>
    </div>
    <div class="main__down__box">
-       <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/climbing-training-royalty-free-image-828532530-1559595807.jpg?crop=0.670xw:1.00xh;0.254xw,0&resize=480:*">
+       <img src="pics/Turner.jpg">
        <h2>
-           Lorem ipsum dolor sit amet consectetur.
+        Briton Turner joins Ineos Grenadiers.
        </h2>
-       <h3>
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti beatae facere earum rerum, illo quasi
-           facilis.
-       </h3>
        <p>
-           US & Canada
+        Cycling
        </p>
    </div>
 </div>
