--- a/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
+++ b/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
@@ -23,9 +23,9 @@
      </div>
      <button style="position: relative; bottom: 58px; left: 0.5%;"class="NavBar__sign" title="sign in"><i class="fa fa-user-circle"></i></button>
      <button style="position: relative; bottom: 58px; left:94%;"class="NavBar__search" title="חיפוש"><i class="fa fa-search"></i></button>
-     <div style="background-color: rgb(252, 186, 3); font-family: Arial, Helvetica, sans-serif; color: white; padding: 10px;"> 
+     <div class="OrangeHeader">
         <h1>SPORT</h1>
-    <div class="NavBar--spors_Header">
+    <div class="NavBar--sport_Header">
        <a href="#">| Home</a>
        <a href="#">| Football</a>
        <a href="#">| Cricket</a>
