--- a/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
+++ b/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
@@ -55,15 +55,12 @@
    </div>
 
    <div class="main__upper__box">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Mavericks_Surf_Contest_2010b.jpg" alt="Surfing - Wikipedia" style="width: 233px; height: 186.64px;">
+    <img src="pics/psg.jpg" style="width: 50vh; height: 50vh;">
        <h2>
-           Lorem ipsum dolor sit amet.
+        PSG score late goals to beat 10-man Saint-Etienne
        </h2>
-       <h3>
-           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore at consequuntur ad ratione similique voluptatem? Eaque!
-       </h3>
        <p>
-           Travel
+        European Football
        </p>
    </div>
 
