--- a/01-HTML-CSS/06-BEM model/Lior_Or-Will/News.html
+++ b/01-HTML-CSS/06-BEM model/Lior_Or-Will/News.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBC-News</title>
-    <link rel="stylesheet" href="News_Lior.css">
+    <link rel="stylesheet" href="dist\news_updated.css">
     <script src="https://kit.fontawesome.com/38117c55e6.js" crossorigin="anonymous"></script>
 </head>
 <body>
      <!--Banner -->
      <div class="banner">        
-        <div class="navbar">
-            
+        <div class="navbar"> 
             <ul> 
                 <li><a href="" class="BBC_logo firstletter" style="color: rgb(24, 3, 3);">B</a></li>  
                 <li><a href="" class="BBC_logo secondletter" style="color: rgb(24, 3, 3);">B</a></li>  
@@ -26,12 +25,13 @@
                 <a class="Search-btn" href="">
                     <i class="fas fa-search"></i>
                 </a>
-                </li>
-            </div>
+                </div>
             </ul>
         </div>
 
     <div class="container">
+
+
         <div class="box box1">
         <div class="internal_box1">
         <h1 class="Header1">Germany's Scholz seals deal to end Merkel era</h1>
