--- a/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/SPORT.HTML
+++ b/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/SPORT.HTML
@@ -70,9 +70,7 @@
             "[He spoke to us] individually, around breakfast time, then we had a meeting before we went out to train, which was very different,"
            </span>Marcus Rashford told Sky Sports. "Ole knows he'll always be a legend of this club and the players here respect him 100 per cent. 
            Michael Carrick will take charge of United for the first time in the Premier League after the club sacked Ole Gunnar Solskjaer last week.
-           Haaland's goal for Dortmund was his 10th in just seven games of a season interrupted by a hip flexor muscle injury that had sidelined him since mid-October.
-
-It was a positive end to a week that saw Dortmund crash out of the Champions League on Wednesday with a 3-1 loss to Sporting Lisbon.
+           Haaland's goal for Dortmund was his 10th in just seven games of a season interrupted by a hip flexor muscle injury that 
             </p>
          
    </div>
