--- a/01-HTML-CSS/06-BEM model/Yael_Haim_Ihiya/HOME.html
+++ b/01-HTML-CSS/06-BEM model/Yael_Haim_Ihiya/HOME.html
@@ -115,7 +115,7 @@
                   </div>
               
 <!--/////////////////////////////////////////////////////////-->
-<div class="container">
+<div class="articalcontainer">
   <div class="grid i1" style="color: brown;" ><img src="pic/home/bbg.jpg" alt="">  <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>
   <div class="grid i2" style="color: brown;"><img src="pic/home/sport.jpg" alt=""> <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>
   <div class="grid i3" style="color: brown;"><img src="pic/home/space.jpg" alt=""> <p class="wrapper__header"> Lorem ipsum dolor sit amet. </p></div>  
@@ -135,7 +135,7 @@
 
     <!--<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             -->
-    <!--Bootstrap cdn-->
+    <!--Bootstrap cdn (footer)-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
