--- a/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/SPORT.HTML
+++ b/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/SPORT.HTML
@@ -68,9 +68,7 @@
           behind at their Carrington training ground, In an exclusive interview with Sky Sports, Marcus Rashford reflects on Ole Gunnar
            Solskjaer's sacking and how Manchester United get back on track; watch Chelsea vs Man Utd live on Sky Sports Premier League from 4pm on Sunday; kick-off 4.30pm<span>
             "[He spoke to us] individually, around breakfast time, then we had a meeting before we went out to train, which was very different,"
-           </span>Marcus Rashford told Sky Sports. "Ole knows he'll always be a legend of this club and the players here respect him 100 per cent. 
-           Michael Carrick will take charge of United for the first time in the Premier League after the club sacked Ole Gunnar Solskjaer last week.
-           Haaland's goal for Dortmund was his 10th in just seven games of a season interrupted by a hip flexor muscle injury that 
+           </span>Marcus Rashford told Sky Sports. "Ole 
             </p>
          
    </div>
