--- a/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/SPORT.HTML
+++ b/01-HTML-CSS/06-BEM model/MICAEL,MARINA,RASHEED/SPORT.HTML
@@ -67,8 +67,8 @@
           reflecting on his time in charge. During his long farewell, he also made the point of speaking with the players he was leaving 
           behind at their Carrington training ground, In an exclusive interview with Sky Sports, Marcus Rashford reflects on Ole Gunnar
            Solskjaer's sacking and how Manchester United get back on track; watch Chelsea vs Man Utd live on Sky Sports Premier League from 4pm on Sunday; kick-off 4.30pm<span>
-            "[He spoke to us] individually, around breakfast time, then we had a meeting before we went out to train, which was very different,"
-           </span>Marcus Rashford told Sky Sports. "Ole 
+            "[He spoke to us] individually, around breakfast time.
+           </span>
             </p>
          
    </div>
