--- a/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
+++ b/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
@@ -25,7 +25,8 @@
      <button style="position: relative; bottom: 58px; left:94%;"class="NavBar__search" title="חיפוש"><i class="fa fa-search"></i></button>
      <div class="OrangeHeader">
         <h1>SPORT</h1>
-    <div class="NavBar--sport_Header">
+    
+        <div class="NavBar--news_Header">
        <a href="#">| Home</a>
        <a href="#">| Football</a>
        <a href="#">| Cricket</a>
@@ -42,7 +43,7 @@
     <div class="main__upper--grid">
    <div class="main__upper__img--big--sports">
        
-       <img src="https://static01.nyt.com/images/2019/11/26/travel/26trending-apps01/26trending-apps01-videoSixteenByNineJumbo1600.jpg" alt="8 Ski Apps, Ready for Winter - The New York Times" style="width: 50vw; height:50vh; ">
+       <img src="https://ichef.bbci.co.uk/live-experience/cps/624/cpsprodpb/vivo/live/images/2021/11/28/57569248-d6d9-401d-98a4-b03191e0c489.jpg" alt="8 Ski Apps, Ready for Winter - The New York Times" style="width: 50vw; height:50vh; ">
        <h2>
            Lorem ipsum dolor sit amet.
        </h2>
