--- a/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
+++ b/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
@@ -43,12 +43,8 @@
    <div class="main__upper__img--big--sports">
        
        <img src="https://static01.nyt.com/images/2019/11/26/travel/26trending-apps01/26trending-apps01-videoSixteenByNineJumbo1600.jpg" alt="8 Ski Apps, Ready for Winter - The New York Times" style="width: 50vw; height:50vh; ">
-       <h2>
-           Lorem ipsum dolor sit amet.
+       <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime ipsum fugit libero voluptatem.
        </h2>
-       <h3>
-           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore at consequuntur ad ratione similique voluptatem? Eaque!
-       </h3>
        <p>
            Travel
        </p>
