--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/Home.html
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/Home.html
@@ -48,5 +48,8 @@
         <i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/37/37922.png" alt="youtube"></i>
         <i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/733/733637.png" alt="vimeo"></i>
 </div>
+<div id="Joe" class="Homeimg">
+    <div class="description">stand up comic, mixed martial arts fanatic, psychedelic adventurer, host of the joe rogan experience podcast</div>
+</div>
 </body>
 </html>
