--- a/01-HTML-CSS/06-BEM model/Yael_Haim_Ihiya/SPORT.html
+++ b/01-HTML-CSS/06-BEM model/Yael_Haim_Ihiya/SPORT.html
@@ -52,22 +52,22 @@
                       <a class="navbar__nav-link" href="SPORT.html">SPORT</a>
                     </li>
                     <li class="navbar__nav-item">
-                        <a class="navbar__nav-link" href=>economy</a>
+                        <a class="navbar__nav-link" href=>capacity</a>
                         </li>
                        <li class="navbar__nav-item">
-                       <a class="navbar__nav-link" href=>covid 19</a>
+                       <a class="navbar__nav-link" href=>live</a>
                        </li>  
                        <li class="navbar__nav-item">
-                       <a class="navbar__nav-link" href=>global</a>
+                       <a class="navbar__nav-link" href=>winer</a>
                        </li>
                        <li class="navbar__nav-item">
-                        <a class="navbar__nav-link" href=>u.s.a.</a>
+                        <a class="navbar__nav-link" href=>futbal</a>
                        </li>
                         <li class="navbar__nav-item">
-                            <a class="navbar__nav-link" href=>culture</a>
+                            <a class="navbar__nav-link" href=>n.b.a.</a>
                           </li>
                           <li class="navbar__nav-item">
-                            <a class="navbar__nav-link" href=>politick</a>
+                            <a class="navbar__nav-link" href=>basketball</a>
                           </li> 
                   </ul>
                 
