--- a/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
+++ b/01-HTML-CSS/06-BEM model/ido, shay, ohad/sport.html
@@ -64,12 +64,12 @@
 
     <img id="SportImgRight" src="https://www.les3vallees.com/media/cache/hero_default/hiver-ski-alpin-addict-solo-marmotte-courchevel-1920x1080-arthurbertrand-002.jpg">
     <h1><a href="https://www.bbc.com/news/world-europe-59448525">The ski season start already and it thriven.</a></h1>
-    <a href="https://www.bbc.com/news/world-europe-59444335"><i class="far fa-clock"></i>2h | Europe</a>
+    <a href="https://www.bbc.com/news/world-europe-59444335"><i class="far fa-clock"></i>3h | Australia</a>
    </div>
    <div class="main__down__box">
 
     <img id="SportImgRight" src="https://img.redbull.com/images/c_crop,w_5568,h_2784,x_0,y_269,f_auto,q_auto/c_scale,w_1200/redbullcom/2019/04/16/e04ec246-cd71-40db-8c47-3e9703132959/chasing-the-shot-leroy-bellet-michel-bourez-tahiti">
-    <h1><a href="https://www.bbc.com/news/world-europe-59448525">Surfing season just ended and we all ready miss it.</a></h1>
+    <h1><a href="https://www.bbc.com/news/world-europe-59448525">Surfing season just ended and we already miss it.</a></h1>
     <a href="https://www.bbc.com/news/world-europe-59444335"><i class="far fa-clock"></i>2h | Europe</a>
    </div>
    <div class="main__down__box">
@@ -81,19 +81,19 @@
 
     <img id="SportImgRight" src="https://static.toiimg.com/thumb/imgsize-38694,msid-87941747,width-650,resizemode-4/87941747.jpg">
     <h1><a href="https://www.bbc.com/news/world-europe-59448525">The big tennis game of all time</a></h1>
-    <a href="https://www.bbc.com/news/world-europe-59444335"><i class="far fa-clock"></i>2h | Europe</a>
+    <a href="https://www.bbc.com/news/world-europe-59444335"><i class="far fa-clock"></i>2h | Europe Football</a>
    </div>
    <div class="main__down__box">
 
     <img id="SportImgRight" src="https://i.guim.co.uk/img/media/cfa1da52ca77565fa9a6a16e8341c9c440030e5c/0_0_2400_1569/master/2400.jpg?width=700&quality=85&auto=format&fit=max&s=2525b638178af2fb3fc1d537247e4fa2">
     <h1><a href="https://www.bbc.com/news/world-europe-59448525">Basball not only for american - best team around the world</a></h1>
-    <a href="https://www.bbc.com/news/world-europe-59444335"><i class="far fa-clock"></i>2h | Europe</a>
+    <a href="https://www.bbc.com/news/world-europe-59444335"><i class="far fa-clock"></i>14h | South America</a>
    </div>
    <div class="main__down__box">
 
     <img id="SportImgRight" src="https://static.timesofisrael.com/www/uploads/2021/08/AP21219370302658.jpg">
     <h1><a href="https://www.bbc.com/news/world-europe-59448525">Linoy Ashram just won the gold and thinking on the next big think</a></h1>
-    <a href="https://www.bbc.com/news/world-europe-59444335"><i class="far fa-clock"></i>2h | Europe</a>
+    <a href="https://www.bbc.com/news/world-europe-59444335"><i class="far fa-clock"></i>4h | Asia</a>
    </div>
   
   
