--- a/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/sport.html
+++ b/01-HTML-CSS/06-BEM model/Andrew Eliya Michael/sport.html
@@ -135,6 +135,31 @@
                 <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia.</h5>
             </div>
         </div>
+        <div class="sider">
+            <div class="scores">
+                <h2>Football Secores</h2>
+                <ul>
+                    <li>Premier League</li>
+                    <li>More</li>
+                </ul>
+                <div class="scores__item">
+                    <p>milan <span>4</span><span>1</span>inter</p>
+                </div>
+                <div class="scores__item">
+                    <p>milan <span>4</span><span>1</span>inter</p>
+                </div>
+                <div class="scores__item">
+                    <p>milan <span>4</span><span>1</span>inter</p>
+                </div>
+                <div class="scores__item">
+                    <p>milan <span>4</span><span>1</span>inter</p>
+                </div>
+                <div class="scores__item">
+                    <p>milan <span>4</span><span>1</span>inter</p>
+                </div>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
 
 
    
