--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/JRE Podcast.html
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel 2/JRE Podcast.html
@@ -48,5 +48,16 @@
         <i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/37/37922.png" alt="youtube"></i>
         <i class="socialmedia--item"> <img src="https://cdn-icons-png.flaticon.com/512/733/733637.png" alt="vimeo"></i>
 </div>
+<div class="logoimg">
+    <img src="https://c.neh.tw/thumb/f/720/6029430698803200.jpg" alt="logo">
+    </div>
+    <div class="watch">
+        watch now
+    
+    </div>
+    <div class="text">
+        <p>The Joe Rogan Experience podcast is a long form conversation hosted by comedian Joe Rogan with friends and guests that have included comedians, actors, musicians, MMA fighters, authors, artists, and beyond.</p>
+    
+    </div>
 </body>
 </html>
